# chemeye

./: .env.example  .gitignore  README.md  admin.py  chemical_eye.py  modal_app.py  package.json  pyproject.toml  requirements.txt  vercel.json
chemical-eye-web/: package-lock.json  package.json  tailwind.config.ts
chemical-eye-web/src/app/: globals.css  page.tsx
chemical-eye-web/src/components/dashboard/: map-view.tsx  sidebar.tsx
chemical-eye-web/src/components/ui/: badge.tsx  button.tsx  card.tsx
chemical-eye-web/src/lib/: api.ts  store.ts  types.ts
landing/: globe.html  index.html
scripts/: backfill_tropomi.py  debug_earthaccess.py  ingest_permian_truth.py  ingest_tropomi_now.py  ingest_validation_data.py  modal_validate.py  purge_db.py  run_backtest.py  run_validation_test.py  seed_live_db.py  validate_algorithm.py  validate_sota.py
src/chemeye/: __init__.py  auth.py  config.py  database.py  workers.py
src/chemeye/api/: __init__.py  app.py  deps.py  schemas.py
src/chemeye/api/routes/: detect.py  health.py  results.py
src/chemeye/cli/: __init__.py  create_key.py
src/chemeye/services/: __init__.py  emit.py  indices.py  methane.py  methane_amf.py  preprocessing.py  sota_methane.py  tropomi.py  visualization.py
